# imc-prosperity-2-submitter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
example/: error.py
prosperity2submit/: __main__.py  core.py  main.py
