[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prosperity2submit"
description = "Command-line submitter for IMC Prosperity 2 algorithms"
version = "0.0.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Jasper van Merle", email = "jaspervmerle@gmail.com"}]
keywords = ["imc", "prosperity", "submit", "submitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies = [
    "keyring",
    "requests",
    "requests-toolbelt",
]

[project.scripts]
prosperity2submit = "prosperity2submit.main:main"

[project.urls]
Repository = "https://github.com/jmerle/imc-prosperity-2-submitter"
Issues = "https://github.com/jmerle/imc-prosperity-2-submitter/issues"
Changelog = "https://github.com/jmerle/imc-prosperity-2-submitter/releases"

[tool.setuptools.packages.find]
include = ["prosperity2submit", "prosperity2submit.*"]
